# Huzlip

./: CMakeLists.txt  README.md
docs/: architecture.md
docs/api/: geometry.md  templates.md  utils.md
include/geometry/: aabb.h  boolean_exact.h  bvh.h  curve.h  mesh.h  remesh.h  subdivision.h  surface.h  tessellation.h  topology.h  vector3d.h
include/math/: random.h
include/templates/: assembly.h  component.h  component_tree.h  event.h  parameter.h  template.h
include/utils/: config.h  filesystem.h  json.h  log.h  profiler.h  timer.h
scripts/: build.sh  coverage.sh  format.sh  lint.sh  run_tests.sh
src/geometry/: aabb.cpp  bvh.cpp  curve.cpp  mesh.cpp  remesh.cpp  subdivision.cpp  surface.cpp  tessellation.cpp  topology.cpp  vector3d.cpp
src/math/: random.cpp
src/templates/: assembly.cpp  component.cpp  component_tree.cpp  event.cpp  parameter.cpp  template.cpp
src/utils/: config.cpp  filesystem.cpp  json.cpp  log.cpp  profiler.cpp  timer.cpp
tests/: CMakeLists.txt  test_geometry.cpp  test_templates.cpp  test_utils.cpp
